<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="55sp" />


    <Button
        android:layout_width="282dp"
        android:layout_height="127dp"
        android:layout_gravity="center"
        android:text="@string/doctor"
        android:textSize="30sp" />

    <Button
        android:layout_width="282dp"
        android:layout_height="127dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:text="@string/parent"
        android:textSize="30sp" />


</LinearLayout>